--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                             </p>
                         </div>
                         <div class="card-footer">
-                            <a href="" class="card-link">Тут смотреть нечего...</a>
+                            <a href="" class="card-link">Тут пока смотреть нечего...</a>
                         </div>
                     </div>
                 </div>
