--- a/about.html
+++ b/about.html
@@ -3,51 +3,112 @@
 <head>
     <meta charset="UTF-8">
     <title>About</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/4130aeabaa.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="js/main.js" type="text/javascript"></script>
 </head>
 <body>
-    <header>
-        <h1><a href="main.html"> Welcome!</a></h1>
-        <p>Maybe here will be a logo...</p>
-    </header>
-    <nav>
-        <div class="card">
-            <ul>
-                <li><a href="main.html">Home</a></li>
-                <li><a href="calc.html">Calc</a></li>
-                <li><a href="horo.html">Horoscope</a></li>
-                <li><a class="active" href="about.html">About</a></li>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <a class="navbar-brand" href="index.html">My First Page</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Главная<span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" data-value="about" href="#about">Обо мне</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://facebook.com/elnurdadashev" target="_blank">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="http://m.me/elnurdadashev" target="_blank">
+                        <i class="fab fa-facebook-messenger"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact-form">
+                        <i class="fas fa-envelope"></i>
+                    </a>
+                </li>
             </ul>
         </div>
     </nav>
-    <section class="section">
-        <div class="row">
-            <div class="about">
-                <div class="columnCenter">
-                    <div class="card">
-                            <div>
-                                <img class="img" src="images/boy.png" alt="photo">
-                            </div>
-                            <div>
-                                <h1>It is me... My name is Elnur and London is the capital of GreatBritain</h1>
-                            </div>
-                    </div>
-                </div>
-                <div class="columnCenter">
-                    <div class="card">
-                        <div>
-                            <h1>It is me... My name is Elnur and London is the capital of GreatBritain</h1>
+    <header class="header">
+        <div class="overlayAbout"></div>
+        <div class="cv">
+            <div class="container">
+                <div class="about">
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="images/ed.jpg" class="img-fluid rounded-circle mx-auto d-block" alt="Elnur">
+                        </div>
+                        <div class="col-8">
+                            <table>
+                                <tr>
+                                    <td colspan="2"><h1>Эльнур Дадашов</h1></td>
+                                </tr>
+                                <tr>
+                                    <td><p>+994553043429</p></td>
+                                    <td><p>elnurdadashev@gmail.com</p></td>
+                                </tr>
+                            </table>
+
+
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    <footer>
-        <div class="card">
-            <p class="tableSecondary"><a href="about.html">Copyright və nə bilim nə...</a></p>
-        </div>
-    </footer>
+    </header>
+
+
+<!-- Contact form -->
+<div class="contact-form" id="contact-form">
+    <div class="container">
+        <h1 class="text-center">Обратная связь</h1>
+        <form>
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <h3>Написать письмо</h3>
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-12 right">
+                    <div class="form-group">
+                        <input type="text" class="form-control form-control-lg" placeholder="Ваше имя" name="">
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control form-control-lg" placeholder="Email" name="email">
+                    </div>
+                    <div class="form-group">
+         <textarea class="form-control form-control-lg">
+
+         </textarea>
+                    </div>
+                    <input type="submit" class="btn btn-secondary btn-block" value="Send" name="">
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 </body>
 </html>
