--- a/guess.html
+++ b/guess.html
@@ -78,6 +78,11 @@
                     </div>
                     <div id="game" style="display: none">
                         <table>
+                            <tr>
+                                <td colspan="3">
+                                    <p id="lifeReminder"></p>
+                                </td>
+                            </tr>
                             <tr class="tr1">
                                 <td rowspan="3">
                                     <img id= "tdFlag" src="">
@@ -93,7 +98,7 @@
                             </tr>
                             <tr>
                                 <td colspan="3">
-                                    <button onclick="setCountry()">Next</button>
+                                    <button id="nextBtn" onclick="setCountry()">Next</button>
                                 </td>
                             </tr>
                         </table>
